--- a/test.css
+++ b/test.css
@@ -4,6 +4,7 @@ body {
     background-size: cover; /* Ensures the background covers the entire body */
     background-color: black; /* Fallback background color */
     font-family: Arial, sans-serif;
+    background-position: center 10%; /* Adjust the second value to move the background image lower */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,6 +165,7 @@ li {
     background-color: transparent;
 }
 .toggle-button {
+    margin-right: -160%;
     font-size: 25px;
     color: white;
     cursor: pointer;
@@ -795,7 +797,7 @@ color:#fff;}
    .nav-item a::after {
     display: none; /* Remove underline effect */
     }
-.SPD{
+.SPD{margin-left: -50%;
     font-size: 30px;
 }
 .about-container {
