--- a/test.css
+++ b/test.css
@@ -667,10 +667,26 @@ textarea {
     transform: translate(0);
   }
 }
+.resume-btn {
+    margin-top: 7vh;
+    background-color: #ff004f; /* Pink color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.resume-btn:hover {
+    background-color: #ffffff;
+    color: black; /* Darker pink on hover */
+}
 
 
 .social-icons {
-    margin-top: 20px;
+    margin-top: 9vh;
 }
 
 .social-icon {
